@@ -20,6 +20,7 @@ struct conn_state {
 	struct sock_addr ** sas;
 	int decr;
 	int nofps;
+	int requirefps;
 	int nokeepalive;
 	const struct proto_secret * K;
 	double timeo;
@@ -56,7 +57,7 @@ starthandshake(struct conn_state * C, int s, int decr)
 
 	/* Start the handshake. */
 	if ((C->handshake_cookie = proto_handshake(s, decr, C->nofps,
-	    C->K, callback_handshake_done, C)) == NULL)
+	    C->requirefps, C->K, callback_handshake_done, C)) == NULL)
 		goto err1;
 
 	/* Success! */
@@ -153,21 +154,23 @@ dropconn(struct conn_state * C)
 }
 
 /**
- * proto_conn_create(s, sas, decr, nofps, nokeepalive, K, timeo,
+ * proto_conn_create(s, sas, decr, nofps, requirefps, nokeepalive, K, timeo,
  *     callback_dead, cookie):
  * Create a connection with one end at ${s} and the other end connecting to
  * the target addresses ${sas}.  If ${decr} is 0, encrypt the outgoing data;
  * if ${decr} is nonzero, decrypt the outgoing data.  If ${nofps} is non-zero,
- * don't use perfect forward secrecy.  Enable transport layer keep-alives (if
- * applicable) on both sockets if and only if ${nokeepalive} is zero.  Drop the
- * connection if the handshake or connecting to the target takes more than
- * ${timeo} seconds.  When the connection is dropped, invoke
- * ${callback_dead}(${cookie}).  Free ${sas} once it is no longer needed.
+ * don't use perfect forward secrecy.  If ${requirefps} is non-zero, drop
+ * the connection if the other end tries to disable perfect forward secrecy.
+ * Enable transport layer keep-alives (if applicable) on both sockets if and
+ * only if ${nokeepalive} is zero.  Drop the connection if the handshake or
+ * connecting to the target takes more than ${timeo} seconds.  When the
+ * connection is dropped, invoke ${callback_dead}(${cookie}).  Free ${sas}
+ * once it is no longer needed.
  */
 int
 proto_conn_create(int s, struct sock_addr ** sas, int decr, int nofps,
-    int nokeepalive, const struct proto_secret * K, double timeo,
-    int (* callback_dead)(void *), void * cookie)
+    int requirefps, int nokeepalive, const struct proto_secret * K,
+    double timeo, int (* callback_dead)(void *), void * cookie)
 {
 	struct conn_state * C;
 
@@ -179,6 +182,7 @@ proto_conn_create(int s, struct sock_addr ** sas, int decr, int nofps,
 	C->sas = sas;
 	C->decr = decr;
 	C->nofps = nofps;
+	C->requirefps = requirefps;
 	C->nokeepalive = nokeepalive;
 	C->K = K;
 	C->timeo = timeo;
