@@ -1,3 +1,7 @@
+spiped-1.4.0
+* Add support for -g option, which makes {spiped, spipe} require perfect
+  forward secrecy by dropping connections if the peer endpoint is detected to
+  be running using the -f option.
 spiped-1.3.1
 * Fix build by adding missing <stdint.h> #include.
 * Minor code cleanups.
